@@ -44,18 +44,4 @@ struct _TileManager
 };
 
 
-typedef struct _PixelDataHandlePrivate PixelDataHandlePrivate;
-
-struct _PixelDataHandlePrivate
-{
-  PixelDataHandle  public;
-  TileManager     *tm;
-  gint             x1, x2, y1, y2;
-  gboolean         readable;
-  gboolean         writeable;
-  gboolean         local_buffer;
-  Tile            *tile;
-};
-
-
 #endif /* __TILE_MANAGER_PVT_H__ */
